  * checks/description{.desc,}:
    + [RA] Do picky spelling and capitalization checks on the description
      and note and explain this in the long description.
  * checks/fields:
    + [RA] Handle double-colon rules when checking that build dependencies
      match debian/rules.  (Closes: #457501)
  * checks/files.desc:
    + [RA] Remove a stray variable from the config-file-reserved tag.
  * checks/menu-format.desc:
    + [RA] Fix non-wm-module-in-wm-modules-menu-section pluralization to
      match the check and reword the long description to be hopefully
      clearer.  Thanks, Martín Ferrari.  (Closes: #457527)
  * checks/menus{.desc,}:
    + [RA] Spelling errors in doc-base files should only be warnings.  Do
      picky spelling and capitalization checks on the abstract and title
      fields.
  * checks/patch-systems:
    + [RA] dpatch permits multiple patches to be listed on the same line
      of 00list.  Patch by Chris Lamb.  (Closes: #457523)
  * checks/scripts:
    + [RA] Add lua40 and lua5.1.  Thanks, Enrico Tassi.  (Closes: #457219)
  * checks/shared-libs{.desc,}:
    + [RA] New check for version numbers in symbol files.  Based on a
      patch from Raphael Hertzog.  (Closes: #457067)

  * debian/control:
    + [RA] Suggest libtext-template-perl, needed for HTML reporting.
  * debian/copyright:
    + [RA] Add my copyright statement.
    + [RA] Reference GPL-2, not the GPL symlink, reflecting our license.

  * frontend/lintian:
    + [RA] Allow + and . in tag names in overrides.  Thanks, Stefan
      Fritsch.  (Closes: #454790)
    + [RA] Check that the argument to --color is valid.
    + [RA] Warn about no package arguments unless --setup-lab or
      --remove-lab are given.  Thanks, Damyan Ivanov.  (Closes: #455732)
    + [RA] Add support for HTML coloring.  (Closes: #458376)
  * frontend/lintian-info:
    + [RA] Allow for HTML color tags.

  * lib/Dep.pm:
    + [RA] Allow substvars instead of package names so that dependency